fix: text not showing on bitcoin connect modal in dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,4 +13,5 @@ body {
 
 html {
   --bc-color-brand: #000000;
+  --bc-brand-mix: 30%;
 }
